fix vertical alignment for text in cells

--- a/src/UI/PlayableWordSearch/PlayableWordSearchComponent.less
+++ b/src/UI/PlayableWordSearch/PlayableWordSearchComponent.less
@@ -46,5 +46,6 @@
     .cell {
         display: table-cell;
         text-align: center;
+        vertical-align: middle;
     }
 }
